k8s/2service_expose/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: kuard
spec:
  replicas: 2
  selector:
    matchLabels:
      name: kuard
  template:
    metadata:
      labels:
        name: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:blue
        ports:
        - containerPort: 8080
