k8s/2service_expose/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: kuard
spec:
  type: NodePort #ClusterIP
  selector:
    name: kuard
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
