k8s/2service_expose/service_dummy.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy
  namespace: kuard
spec:
  type: NodePort
  selector:
    name: dummy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
